[project]
name = "mcp-rag-markdown"
version = "0.1.0"
description = "MCP server for semantic search over markdown knowledge bases via RAG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-rag-markdown = "mcp_rag_markdown.server:main"
